--- a/src/components/css/faq_unit.scss
+++ b/src/components/css/faq_unit.scss
@@ -72,7 +72,7 @@
                 height:20px;
             }
         }
-        .cross {
+        .crox {
             display: none;
         }
 
